tests/analyze/regex-anchor-quantifier-error/analyze.snap
---
source: tests/analyze.rs
expression: output
---
error: A quantifier cannot be applied to an anchor (`^`, `$`, or `%`).
> 1 | def bad-start = /^+ "x"/
                        ^

error: A quantifier cannot be applied to an anchor (`^`, `$`, or `%`).
> 3 | def bad-end = /"x" $?/
                          ^

error: A quantifier cannot be applied to an anchor (`^`, `$`, or `%`).
> 5 | def bad-boundary = /% * "y"/
                            ^

